[package]
name = "marc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
indexmap = "2.2.6"
itertools = "0.13.0"
nom = "7.1.3"
nonempty = "0.10.0"
pest = "2.7.10"
pest_derive = "2.7.10"
pretty_assertions = "1.4.0"
rust_decimal = "1.35.0"
serde_json = "1.0.117"

